[gd_scene load_steps=11 format=3 uid="uid://blhv4s2jngf81"]

[ext_resource type="Script" uid="uid://weqte4k6sed3" path="res://UI/Dialog/Script/DialogUI.gd" id="1_cqhgg"]
[ext_resource type="FontFile" uid="uid://qiul4lwd2ov5" path="res://Common/Poco.ttf" id="2_7k56d"]
[ext_resource type="Texture2D" uid="uid://bs4cx7yep5fap" path="res://UI/SpriteSheet.png" id="3_tn86x"]

[sub_resource type="Theme" id="Theme_b3eoe"]
Label/colors/font_color = Color(0.105882, 0.133333, 0.211765, 1)
Label/fonts/font = ExtResource("2_7k56d")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ihai4"]
texture = ExtResource("3_tn86x")
texture_margin_top = 21.0
region_rect = Rect2(32, 678, 410, 84)

[sub_resource type="SystemFont" id="SystemFont_7i12y"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_6bx7c"]
Label/font_sizes/font_size = 10
Label/fonts/font = SubResource("SystemFont_7i12y")

[sub_resource type="Animation" id="Animation_xyo5h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bi2p1"]
resource_name = "new_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.466667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36pss"]
_data = {
&"RESET": SubResource("Animation_xyo5h"),
&"new_animation": SubResource("Animation_bi2p1")
}

[node name="DialogUi" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -60.0
offset_right = -5.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_cqhgg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -65.0
offset_right = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_b3eoe")
theme_override_styles/panel = SubResource("StyleBoxTexture_ihai4")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 5.0
offset_right = -7.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="DialogSpeaker" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "NPC Name
"

[node name="DialogText" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Dialog text.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogOptions" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = 22.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Panel/TextureButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_top = 1.0
offset_right = 5.0
offset_bottom = 15.0
grow_horizontal = 2
theme = SubResource("Theme_6bx7c")
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_36pss")
}

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
